# phpick

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  pages.yml  release.yml
crates/phpick/: Cargo.toml
crates/phpick/src/: discover.rs  http.rs  main.rs  project.rs  update.rs  windows_setup.rs
docs/: index.html  style.css
test/: shim_test.sh
