[package]
name = "phpick"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
description = "Per-project PHP version routing for composer and php — Windows native"
repository = "https://github.com/phpick/phpick"
license = "MIT"

[[bin]]
name = "phpick"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
